--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -6,5 +6,14 @@
 </head>
 <body>
 <p>Get your greeting <a href="/home">here</a></p>
+
+<form action="testForm">
+    <input type="text", name="name">
+    <br>
+    <input type ="number" , name="age">
+    <br>
+    <input type="submit", value="Click To Test!">
+
+</form>
 </body>
 </html>
