--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -13,6 +13,8 @@
     <input type ="number" , name="age">
     <br>
     <input type="submit", value="Click To Test!">
+<br>
+    <p>Click <a href="https://us-central1-triviaapi-d1d92.cloudfunctions.net/helloWorld">Here</a>For Hello World!</p>
 
 </form>
 </body>
